<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_button_login"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/mainSignupLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="10dp"
        android:background="@drawable/transparent_bg"
        android:orientation="vertical"
        android:padding="10dp"
        android:weightSum="1">

        <TextView
            android:id="@+id/textView_signup_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:padding="5dp"
            android:text="@string/sign_up"
            android:textColor="@android:color/white"
            android:textSize="26sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etSignUpEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/edittext_top_bg"
            android:drawableLeft="@drawable/email"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="5dp" />

        <EditText
            android:id="@+id/etSignUpPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/edittext_default_bg"
            android:drawableLeft="@drawable/phone"
            android:hint="@string/phone_num"
            android:padding="5dp" />

        <EditText
            android:id="@+id/etSignUpPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/edittext_bottom_bg"
            android:drawableLeft="@drawable/password"
            android:hint="@string/passwordHint"
            android:inputType="textPassword"
            android:padding="5dp" />

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginBottom="25dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_blue_bg"
            android:text="@string/sign_up"
            android:textColor="@android:color/white"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>