<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_button_login"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:padding="5dp"
        android:text="@string/welcome_txt"
        android:textColor="@android:color/white"
        android:textSize="45sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"/>


    <LinearLayout
        android:id="@+id/mainSignupLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="10dp"
        android:background="@drawable/transparent_bg"
        android:orientation="vertical"
        android:padding="10dp"
        android:weightSum="1">

        <TextView
            android:id="@+id/textView_login_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:padding="5dp"
            android:text="@string/login_ui"
            android:textColor="@android:color/white"
            android:textSize="26sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/edittext_top_focus_bg"
            android:drawableLeft="@drawable/phone"
            android:hint="@string/phone_num"
            android:padding="5dp"
            android:inputType="textEmailAddress"
            android:textColorHint="#bbbbbb" />

        <EditText
            android:id="@+id/etPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:padding="5dp"
            android:background="@drawable/edittext_bottom_focus_bg"
            android:drawableLeft="@drawable/password"
            android:hint="@string/passwordHint"
            android:inputType="textPassword"
            android:textColorHint="#bbbbbb" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginBottom="25dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_blue_bg"
            android:text="@string/login_ui"
            android:textColor="@android:color/white"
            android:textStyle="bold" />
    </LinearLayout>

    <com.m_ticket.customcomponent.Slide
        android:layout_below="@id/mainSignupLayout"
        android:layout_marginTop="30dp"
        android:id="@+id/slide"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:layout_centerInParent="true"
        android:gravity="center" />

</RelativeLayout>